<resources>
    <string name="app_name">fabric-mobile-mvvm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Sign In</string>
    <string name="welcome_user">Welcome Back !</string>
    <string name="desc_sign_in">Please sign in to continue</string>
    <string name="username">Username</string>
    <string name="desc_sign_up">Please sign up to continue</string>
    <string name="menu">Menu</string>
    <string name="fabric">Fabric</string>
    <string name="report">Report</string>
    <string name="latest_po_number">Latest Po Number</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_apps">Fabric Grey</string>
    <string name="desc_app">Make Your Work Modern And Easy</string>
    <string name="machine">Machine</string>
    <string name="fabric_type">Fabric Type</string>
    <string name="fabric_brand">Fabric Brand</string>
    <string name="todo">TODO</string>
    <string name="no_internet_connection">No Internet Connection :(</string>
    <string name="failed_to_get_data">Failed To Get Data :(</string>
    <string name="po_number">Po Number</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="supporting_text">This will delete fabric</string>
    <string name="title_dialog">Delete Fabric ?</string>
    <string name="desc_auth">Already Have An Account?</string>
    <string name="sign_up_text">Let\'s Get Started</string>
    <string name="fabric_detail">Fabric Detail</string>
</resources>